# arrayprint

./: .gitignore  README.md  pyproject.toml  tox.ini
docs/: example.ipynb
src/arrayprint/: __init__.py  field_files.py
test/: MyProject.fld  test_.py
